# github-intel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  LOCAL_SETUP.md  README.md  alembic.ini  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20250209000000_initial_schema.py  20250209180000_embedding_dim_384.py  20250209200000_stars_gained_30d.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
scripts/: run_ingestion.py  seed_categories.py
src/: __init__.py  celery_app.py  config.py  constants.py  database.py  main.py
src/api/: deps.py
src/api/v1/: categories.py  health.py  pipeline.py  repositories.py  router.py  stats.py  trending.py
src/llm/: anthropic_provider.py  base.py  embeddings.py  factory.py  openai_provider.py
src/models/: __init__.py  base.py  category.py  content.py  embedding.py  repository.py
src/schemas/: categories.py  common.py  content.py  repository.py  stats.py  trending.py
src/services/classification/: __init__.py  embedding_classifier.py  keyword_heuristics.py  language_analyzer.py  service.py
src/services/content_generation/: __init__.py  generator.py  prompts.py  service.py
src/services/repo_scoring/: __init__.py  quality_filters.py  scorer.py  service.py
src/tasks/: classification_tasks.py  content_tasks.py  ingestion_tasks.py  scoring_tasks.py
tests/: conftest.py
(+28 files in other folders)
